# xmms-osd

./: ChangeLog  Makefile.am  README.md  bootstrap.sh  configure.ac  xmms-osd.1  xmms-osd.spec.in
src/: Makefile.am  xmms-osd.c
